@startuml

interface DataSink{
+ void persist(UniqueEntity entity)
+ void persistAll(Collection<UniqueEntity>)
+ void persistTimeSeries(TimeSeries<E,V>)
}

interface InputDataSink {
+ void persistIgnoreNested(InputEntity)
+ void persistAllIgnoreNested(Collection<InputEntity>)
+ void persistIncludeNested(InputEntity)
+ void persistAllIncludeNested(Collection<InputEntity>)
+ void persistJointGrid(JointGridContainer)
}
InputDataSink --|> DataSink

interface OutputDataSink
OutputDataSink --|> DataSink

' Implementations
class CsvFileSink {
+ CsvFileSink(String, ProcessorProvider, EntityPersistenceNamingStrategy, boolean, String)
+ CsvFileSink(String, EntityPersistenceNamingStrategy, boolean, String)
+ CsvFileSink(String)
- void initFiles(ProcessorProvider, EntityPersistenceNamingStrategy)
- void write(UniqueEntity)
}
CsvFileSink ..|> InputDataSink
CsvFileSink ..|> OutputDataSink


class InfluxDBFileSink {
+ InfluxDbSink(InfluxDbConnector, EntityPersistenceNamingStrategy)
+ InfluxDbSink(InfluxDbConnector)
- Set<Point> extractPoints(UniqueEntity)
- String transformToMeasurementName(String)
- transformToPoint(UniqueEntity)
- transformToPoint(UniqueEntity, String)
- transformToPoints(TimeSeries<E,V>)
- transformToPoints(TimeSeries<E,V>, String)
}
InfluxDBFileSink ..|> OutputDataSink
@enduml